# tergite-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  README.md  README.txt  __stub__qiskit_qasm_scenario_template.json  analysis.py  application_starter.py  backend_config.example.toml  bcc.service  bitbucket-pipelines.yml  calibration_graph_parser.py  calibration_json_parser.py  calibration_supervisor.py  conda-env.sh  cron_trigger.sh  dot-env-template.txt  dump_redis.py  enums.py  execution_worker.py  executor-config.example.yml  flask-app.py  job_supervisor.py  kernel-config.example.yml  labberworker.py  postprocessing_worker.py  preprocessing_worker.py  pyproject.toml  qasm_dummy_template.labber  qiskit_qasm_calibration.json  qiskit_qasm_calibration_config.json  qiskit_qasm_scenario_template.json  qiskit_qasm_stub_template.json  qiskit_qasm_template.json  qobj_template.json  qobj_template.labber  (+26 more)
.github/workflows/: ci.yml
Labber/: __init__.py
app/: README.md  __init__.py
app/api/: __init__.py  dependencies.py  exc.py
app/libs/: store.py
app/scripts/: __init__.py  init_device_properties.py  load_config.py  push_simulator_to_db.py  train_discriminator.py
app/tests/: conftest.py  test_api.py  test_kernel.py  test_settings.py  test_simulator_scripts.py  test_storage.py  test_store.py
app/utils/: api.py  datetime.py  exc.py  http.py  (+8 more)
archive/: bcc_stub.py  cron_trigger.sh  run.py  wsgi.py
backend_properties_config/: backend_config.toml  backend_config_default.toml  device_default.toml  initialize_properties.py  load_config.py  property_templates_default.toml  property_templates_example.toml
backend_properties_storage/: storage.py  test_storage.py  types.py
backend_properties_updater/: .dockerignore  Coupler.py  Gate.py  Qubit.py  README.md  Resonator.py  backend_config.json  backend_config_updater.py  backend_properties_updater_utils.py  main.py  mss_backend_updater.py
cal_routines/: dummy_cals.py  dummy_checks.py
calibration/: calibration_common.py  calibration_lib.py  measurement_jobs.py  pulsed_resonator_spectroscopy.toml  rabi.toml  ramsey.toml  two_tone.toml  vna_resonator_spectroscopy.toml
calibration_graphs/: basic.json  big_graph.json  default.json  subgraph_test.json  vna_resonator_spectropscopy.json
calibration_jsons/: create_big_json.py
configs/: backend_config_default.toml  backend_config_default_typed.toml  device_example.toml  property_templates_default.toml
debug/: application_starter.py  run_redis_worker.py
dev/: experiments.py  pip_env_full_dump.txt
doc/: calibration.md
docs/: auth.md  configuration.md  deployment.md  executors.md
etc/: crontab
examples/: env_variables.txt
measurement_jobs/: important_parameters.txt  measurement_jobs.py
scenario_templates/: pulsed_qubit_spectroscopy_using_general_calib_template.json  pulsed_spectroscopy_scenario_template.json  rabi_using_general_calib_template.json  ramsey_using_general_calib_template.json  resonator_spectroscopy_scenario_template_keysight_vna.json
scenario_templates_unref/: pulsed_resonator_spectroscopy_scenario_template.json  resonator_qubit_calibration_scenario_template.json
utils/: Labber_file_handling.py  application_starter.py  json_utils.py  labber_file_handling.py  labber_importer.py  redis.py  representation.py  uuid.py
(+255 files in other folders)
