# This code is part of Tergite
#
# (C) Copyright Miroslav Dobsicek 2020, 2021
# (C) Copyright David Wahlstedt 2023
# (C) Copyright Martin Ahindura 2024
# (C) Copyright Chalmers Next Labs 2025
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tergite-backend"
authors = [
    {name = "Miroslav Dobsicek"},
    {name = "Axel Andersson"},
    {name = "Adilet Tuleouv"},
    {name = "Martin Ahindura"},
    {name = "Stefan Hill"},
    {name = "David Wahlstedt"},
    {name = "Abdullah-Al Amin"},
    {name = "Pontus Vikstål"},
    {name = "Nicklas Botö"},
    {name = "Fabian Forslund"},
]
maintainers = [
    {name = "Chalmers Next Labs AB", email = "contact@quantum.chalmersnextlabs.se"}
]
version = "2025.03.2"
description = "the Backend of the Tergite software stack of the WACQT Quantum Computer."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["quantum", "qiskit", "quantify"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.65.1,<0.109.0",
    "redis>=3.5.3",
    "rq>=1.10.0",
    "uvicorn==0.24.0.post1",
    "numpy==1.23.5",
    "h5py>=3.7.0",
    "scipy==1.9.0",
    "networkx>=2.5.1",
    "toml>=0.10.2",
    "scikit-learn~=1.2.2",
    # other pydantic version with combination of quantify_scheduler==0.20.1 break SerialCompiler
    "pydantic==2.1",
    # unfortunately, there are no wheels for darwin <12 for pyarrow >18.0.0
    "pyarrow<18.0.0; sys_platform == 'darwin'",
    "qiskit-ibmq-provider==0.20.2",
    "pandas==1.4.3",
    "python_multipart==0.0.6",
    "qcodes>=0.42.1",
    "qiskit==0.45.0",
    "qiskit-ibm-provider==0.7.2",
    "quantify-core==0.7.9",
    "quantify-scheduler~=0.20.1",
    "qblox-instruments==0.12.0",
    "requests>=2.31.0",
    "rich==13.7.0",
    "tabulate==0.9.0",
    "tqdm>=4.66.1",
    "xarray==2023.11.0",
    "filelock>=3.12.2",
    "ruamel.yaml",
    "jax~=0.4.30",
    "qiskit-dynamics==0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "httpx==0.27.2",
    "pytest-mock>=3.12.0",
    "black==23.11.0",
    "isort>=5.12.0",
    "freezegun>=1.2.2",
    "pytest-freezegun",
    "pytest-lazy-fixture>=0.6.3",
]

[project.urls]
Homepage = "https://github.com/tergite/tergite-backend"
Repository = "https://github.com/tergite/tergite-backend"
Documentation = "https://github.com/tergite/tergite-backend/tree/main/docs"
Issues = "https://github.com/tergite/tergite-backend/issues"
Changelog = "https://github.com/tergite/tergite-backend/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["docs*", "app.tests*"]

[tool.isort]
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"